# cmake_template

./: CMakeLists.txt  upute
src/: foo.cpp  main.cpp
